# sycl-project-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
